--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -5,3 +5,21 @@
      name=apache2 
      update_cache=yes 
      state=latest
+
+
+ - name: install php
+   apt: 
+     name:      
+       - apache2
+       - libapache2-mod-php 
+
+
+ 
+ - name: download composer installer
+     get_url:
+       url: https://getcomposer.org/installer
+     dest: /tmp/composer
+
+ - name: install composer
+     shell: php /tmp/composer --install-dir=/usr/local/bin
+     become: yes
